добавил атрибуты кнопкам, скачал урну

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img class="user-profile__avatar" src="./images/Avatar.svg" alt="аватар пользователя">
         <div class="user-profile__user-info">
           <h1 class="user-profile__user-name">Жак-Ив Кусто</h1>
-          <button type="button" class="button button_type_edit user-profile__edit-button" name="open-form" value="Открыть форму"></button>
+          <button type="button" class="button button_type_edit user-profile__edit-button" name="open-form" value="Открыть форму" title="Редактировать профиль"></button>
           <p class="user-profile__user-job">Исследователь океана</p>
         </div>
-        <button type="button" class="button button_type_add user-profile__add-button" name="add-button" value="Добавить фото"></button>
+        <button type="button" class="button button_type_add user-profile__add-button" name="add-button" value="Добавить фото" title="Добавить фото"></button>
       </section>
 
       <section class="photo content__photo">
