сделал кнопки лайк

--- a/index.html
+++ b/index.html
@@ -31,44 +31,45 @@
         <ul class="photo__cards">
           <li class="card photo__card">
             <img class="card__image" src="./images/sea-star.jpg" alt="фото морской звезды">
+            <button type="button" class="button button_type_trash card__trash-button" name="trash-button" value="delete" title="Удалить фото"></button>
             <div class="card__description">
               <h2 class="card__title">Морская звезда</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
           <li class="card photo__card">
             <img class="card__image" src="./images/coral-reef2.jpg" alt="фото кораллового рифа">
             <div class="card__description">
               <h2 class="card__title">Коралловый риф</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
           <li class="card photo__card">
             <img class="card__image" src="./images/dolphin2.jpg" alt="фото дельфина">
             <div class="card__description">
               <h2 class="card__title">Дельфин</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
           <li class="card photo__card">
             <img class="card__image" src="./images/manta2.jpg" alt="фото ската">
             <div class="card__description">
               <h2 class="card__title">Скат</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
           <li class="card photo__card">
             <img class="card__image" src="./images/whale2.jpg" alt="фото кита">
             <div class="card__description">
               <h2 class="card__title">Кит</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
           <li class="card photo__card">
             <img class="card__image" src="./images/white-shark2.jpg" alt="фото белой акулы">
             <div class="card__description">
               <h2 class="card__title">Большая белая акула</h2>
-              <button type="button" class="button button_type_like card__button" name="like-button" value="like"></button>
+              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
             </div>
           </li>
         </ul>
