--- a/index.html
+++ b/index.html
@@ -21,58 +21,14 @@
         <img class="user-profile__avatar" src="./images/Avatar.svg" alt="аватар пользователя">
         <div class="user-profile__user-info">
           <h1 class="user-profile__user-name">Жак-Ив Кусто</h1>
-          <button type="button" class="button button_type_edit user-profile__edit-button" name="open-form" value="Открыть форму" title="Редактировать профиль"></button>
+          <button type="button" class="button button_type_edit user-profile__edit-button" name="edit-profile-button" value="Открыть форму" title="Редактировать профиль"></button>
           <p class="user-profile__user-job">Исследователь океана</p>
         </div>
-        <button type="button" class="button button_type_add user-profile__add-button" name="add-button" value="Добавить фото" title="Добавить фото"></button>
+        <button type="button" class="button button_type_add user-profile__add-button" name="add-photo-button" value="Добавить фото" title="Добавить фото"></button>
       </section>
 
       <section class="photo content__photo">
-        <ul class="photo__cards">
-          <li class="card photo__card">
-            <img class="card__image" src="./images/sea-star.jpg" alt="фото морской звезды">
-            <button type="button" class="button button_type_trash card__trash-button" name="trash-button" value="delete" title="Удалить фото"></button>
-            <div class="card__description">
-              <h2 class="card__title">Морская звезда</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-          <li class="card photo__card">
-            <img class="card__image" src="./images/coral-reef2.jpg" alt="фото кораллового рифа">
-            <div class="card__description">
-              <h2 class="card__title">Коралловый риф</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-          <li class="card photo__card">
-            <img class="card__image" src="./images/dolphin2.jpg" alt="фото дельфина">
-            <div class="card__description">
-              <h2 class="card__title">Дельфин</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-          <li class="card photo__card">
-            <img class="card__image" src="./images/manta2.jpg" alt="фото ската">
-            <div class="card__description">
-              <h2 class="card__title">Скат</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-          <li class="card photo__card">
-            <img class="card__image" src="./images/whale2.jpg" alt="фото кита">
-            <div class="card__description">
-              <h2 class="card__title">Кит</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-          <li class="card photo__card">
-            <img class="card__image" src="./images/white-shark2.jpg" alt="фото белой акулы">
-            <div class="card__description">
-              <h2 class="card__title">Большая белая акула</h2>
-              <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="photo__cards"></ul>
       </section>
     </main>
     <footer class="footer page__footer">
@@ -82,22 +38,45 @@
     <div class="popup page__overlay">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-button" name="close-form" value="Закрыть форму"></button>
-        <form name="popup-form" class="edit-form popup__form">
-          <h2 class="edit-form__title">Редактировать профиль</h2>
-          <ul class="edit-form__inputs">
-            <li class="edit-form__field">
-              <input type="text" class="edit-form__input edit-form__input_type_name" name="user-name" id="user-name" value="Жак-Ив Кусто" required>
+        <form class="form popup__form popup__form_type_edit" name="edit-profile-form">
+          <h2 class="form__title">Редактировать профиль</h2>
+          <ul class="form__inputs">
+            <li class="form__field">
+              <input type="text" class="form__input form__input_type_name" name="user-name" id="user-name" value="Жак-Ив Кусто" required>
             </li>
-            <li class="edit-form__field">
-              <input type="text" class="edit-form__input edit-form__input_type_job" name="user-job" id="user-job" value="Исследователь океана" required>
+            <li class="form__field">
+              <input type="text" class="form__input form__input_type_job" name="user-job" id="user-job" value="Исследователь океана" required>
             </li>
           </ul>
-          <button type="submit" class="button button_type_submit edit-form__submit-button" name="submit-button" value="Сохранить">Сохранить</button>
+          <button type="submit" class="button button_type_submit form__submit-button" name="save-profile-button" value="Сохранить">Сохранить</button>
+        </form>
+        <form class="form popup__form popup__form_type_add" name="add-photo-form">
+          <h2 class="form__title">Новое место</h2>
+          <ul class="form__inputs">
+            <li class="form__field">
+              <input type="text" class="form__input form__input_type_place-title" name="place-title" id="place-title" value="" placeholder="Название" required>
+            </li>
+            <li class="form__field">
+              <input type="text" class="form__input form__input_type_image-link" name="image-link" id="image-link" value="" placeholder="Ссылка на картинку" required>
+            </li>
+          </ul>
+          <button type="submit" class="button button_type_submit form__submit-button" name="create-card-button" value="Создать">Создать</button>
         </form>
       </div>
+
     </div>
 
   </div>
+  <template id="photo-card">
+	  <li class="card photo__card">
+      <img class="card__image" src="" alt="фото">
+      <button type="button" class="button button_type_trash card__trash-button" name="trash-button" value="delete" title="Удалить фото"></button>
+      <div class="card__description">
+        <h2 class="card__title"></h2>
+        <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
+      </div>
+    </li>
+  </template>
 
   <script src="./scripts/script.js"></script>
 </body>
