--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup page__overlay">
+    <div class="popup page__overlay popup_type_edit-profile">
       <div class="popup__container">
-        <button type="button" class="button button_type_close popup__close-button" name="close-form" value="Закрыть форму"></button>
-        <form class="form popup__form popup__form_type_edit" name="edit-profile-form">
+        <button type="button" class="button button_type_close popup__close-button button_close_edit-profile" name="close-edit-form" value="Закрыть форму"></button>
+        <form class="form popup__form form_type_edit" name="edit-profile-form">
           <h2 class="form__title">Редактировать профиль</h2>
           <ul class="form__inputs">
             <li class="form__field">
@@ -50,7 +50,13 @@
           </ul>
           <button type="submit" class="button button_type_submit form__submit-button" name="save-profile-button" value="Сохранить">Сохранить</button>
         </form>
-        <form class="form popup__form popup__form_type_add" name="add-photo-form">
+      </div>
+    </div>
+
+    <div class="popup page__overlay popup_type_add-photo">
+      <div class="popup__container">
+        <button type="button" class="button button_type_close popup__close-button button_close_add-photo" name="close-add-form" value="Закрыть форму"></button>
+        <form class="form popup__form form_type_add" name="add-photo-form">
           <h2 class="form__title">Новое место</h2>
           <ul class="form__inputs">
             <li class="form__field">
@@ -63,14 +69,13 @@
           <button type="submit" class="button button_type_submit form__submit-button" name="create-card-button" value="Создать">Создать</button>
         </form>
       </div>
-
     </div>
 
-  </div>
-  <template id="photo-card">
+
+    <template id="photo-card">
 	  <li class="card photo__card">
       <img class="card__image" src="" alt="фото">
-      <button type="button" class="button button_type_trash card__trash-button" name="trash-button" value="delete" title="Удалить фото"></button>
+      <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
       <div class="card__description">
         <h2 class="card__title"></h2>
         <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
@@ -78,7 +83,7 @@
     </li>
   </template>
 
-  <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 
