--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@
       </div>
     </div>
 
-    <!--  <template id="photo-card"> -->
-    <li class="card photo__card">
-      <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
-      <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
-      <div class="card__description">
-        <h2 class="card__title"></h2>
-        <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
-      </div>
-    </li>
-    <!--	</template>  -->
+    <template id="photo-card">
+
+      <li class="card photo__card">
+        <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
+        <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
+        </div>
+      </li>
+
+    </template>
   </div>
 
   <script src="./scripts/script.js"></script>
