--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     </template>
   </div>
-
+  <script src="./scripts/mocks.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
 
