--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup page__overlay page__overlay_theme_light popup_type_edit-profile">
+    <div class="popup page__overlay page__overlay_theme_light popup_type_edit-profile" name="edit" id="edit">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-button button_close_edit-profile" name="close-edit-form" value="Закрыть форму"></button>
-        <form class="form popup__form form_type_edit" name="edit-profile-form">
+        <form class="form popup__form form_type_edit" name="edit-profile-form" novalidate>
           <h2 class="form__title">Редактировать профиль</h2>
           <ul class="form__inputs">
             <li class="form__field">
-              <input type="text" class="form__input form__input_type_name" name="user-name" id="user-name" value="Жак-Ив Кусто" required>
+              <input type="text" class="form__input form__input_type_name" name="user-name-input" id="user-name-input" value=" " placeholder="Имя" minlength="2" maxlength="40" required>
+              <span class="form__input-error" name="user-name-input-error" id="user-name-input-error">Вы пропустили это поле.</span>
             </li>
             <li class="form__field">
-              <input type="text" class="form__input form__input_type_job" name="user-job" id="user-job" value="Исследователь океана" required>
+              <input type="text" class="form__input form__input_type_job" name="user-job-input" id="user-job-input" value=" " placeholder="О себе" minlength="2" maxlength="200" required>
+              <span class="form__input-error" name="user-job-input-error" id="user-job-input-error">Вы пропустили это поле.</span>
             </li>
           </ul>
           <button type="submit" class="button button_type_submit form__submit-button" name="save-profile-button" value="Сохранить">Сохранить</button>
@@ -55,17 +57,19 @@
       </div>
     </div>
 
-    <div class="popup page__overlay page__overlay_theme_light popup_type_add-photo">
+    <div class="popup page__overlay page__overlay_theme_light popup_type_add-photo" name="add" id="add">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-button button_close_add-photo" name="close-add-form" value="Закрыть форму"></button>
-        <form class="form popup__form form_type_add" name="add-photo-form">
+        <form class="form popup__form form_type_add" name="add-photo-form" novalidate>
           <h2 class="form__title">Новое место</h2>
           <ul class="form__inputs">
             <li class="form__field">
-              <input type="text" class="form__input form__input_type_place-title" name="place-title" id="place-title" value="" placeholder="Название" required>
+              <input type="text" class="form__input form__input_type_place-title" name="place-title-input" id="place-title-input" value="" minlength="1" maxlength="30" placeholder="Название" required>
+              <span class="form__input-error" name="place-title-input-error" id="place-title-input-error"></span>
             </li>
             <li class="form__field">
-              <input type="text" class="form__input form__input_type_image-link" name="image-link" id="image-link" value="" placeholder="Ссылка на картинку" required>
+              <input type="url" class="form__input form__input_type_image-link" name="image-link-input" id="image-link-input" value="" placeholder="Ссылка на картинку" required>
+              <span class="form__input-error" name="image-link-input-error" id="image-link-input-error"></span>
             </li>
           </ul>
           <button type="submit" class="button button_type_submit form__submit-button" name="create-card-button" value="Создать">Создать</button>
@@ -73,7 +77,7 @@
       </div>
     </div>
 
-    <div class="popup page__overlay page__overlay_theme_dark popup_type_view-photo">
+    <div class="popup page__overlay page__overlay_theme_dark popup_type_view-photo" name="view" id="view">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-photo-button button_close_view-photo" name="close-photo" value="Закрыть фото"></button>
         <figure class="popup__photo-content">
@@ -97,7 +101,9 @@
     </template>
   </div>
   <script src="./scripts/mocks.js"></script>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/script.js"></script>
+
 </body>
 
 </html>
