--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img class="user-profile__avatar" src="./images/avatar.svg" alt="аватар пользователя">
         <div class="user-profile__user-info">
           <h1 class="user-profile__user-name">Жак-Ив Кусто</h1>
-          <button type="button" class="button button_type_edit user-profile__edit-button" name="edit-profile-button" value="Открыть форму" title="Редактировать профиль"></button>
+          <button type="button" class="button button_type_edit user-profile__edit-button" name="edit-profile-form-button" id="edit-profile-form-button" value="Открыть форму" title="Редактировать профиль"></button>
           <p class="user-profile__user-job">Исследователь океана</p>
         </div>
-        <button type="button" class="button button_type_add user-profile__add-button" name="add-photo-button" value="Добавить фото" title="Добавить фото"></button>
+        <button type="button" class="button button_type_add user-profile__add-button" name="add-photo-form-button" id="add-photo-form-button" value="Добавить фото" title="Добавить фото"></button>
       </section>
 
       <section class="photo content__photo">
@@ -37,7 +37,7 @@
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup page__overlay page__overlay_theme_light popup_type_edit-profile" name="edit" id="edit">
+    <div class="popup page__overlay page__overlay_theme_light popup_type_edit-profile" id="edit">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-button button_close_edit-profile" name="close-edit-form" value="Закрыть форму"></button>
         <form class="form popup__form form_type_edit" name="edit-profile-form" novalidate>
@@ -45,11 +45,11 @@
           <ul class="form__inputs">
             <li class="form__field">
               <input type="text" class="form__input form__input_type_name" name="user-name-input" id="user-name-input" value=" " placeholder="Имя" minlength="2" maxlength="40" required>
-              <span class="form__input-error" name="user-name-input-error" id="user-name-input-error">Вы пропустили это поле.</span>
+              <span class="form__input-error" id="user-name-input-error"></span>
             </li>
             <li class="form__field">
               <input type="text" class="form__input form__input_type_job" name="user-job-input" id="user-job-input" value=" " placeholder="О себе" minlength="2" maxlength="200" required>
-              <span class="form__input-error" name="user-job-input-error" id="user-job-input-error">Вы пропустили это поле.</span>
+              <span class="form__input-error" id="user-job-input-error"></span>
             </li>
           </ul>
           <button type="submit" class="button button_type_submit form__submit-button" name="save-profile-button" value="Сохранить">Сохранить</button>
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <div class="popup page__overlay page__overlay_theme_light popup_type_add-photo" name="add" id="add">
+    <div class="popup page__overlay page__overlay_theme_light popup_type_add-photo" id="add">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-button button_close_add-photo" name="close-add-form" value="Закрыть форму"></button>
         <form class="form popup__form form_type_add" name="add-photo-form" novalidate>
@@ -65,11 +65,11 @@
           <ul class="form__inputs">
             <li class="form__field">
               <input type="text" class="form__input form__input_type_place-title" name="place-title-input" id="place-title-input" value="" minlength="1" maxlength="30" placeholder="Название" required>
-              <span class="form__input-error" name="place-title-input-error" id="place-title-input-error"></span>
+              <span class="form__input-error" id="place-title-input-error"></span>
             </li>
             <li class="form__field">
               <input type="url" class="form__input form__input_type_image-link" name="image-link-input" id="image-link-input" value="" placeholder="Ссылка на картинку" required>
-              <span class="form__input-error" name="image-link-input-error" id="image-link-input-error"></span>
+              <span class="form__input-error" id="image-link-input-error"></span>
             </li>
           </ul>
           <button type="submit" class="button button_type_submit form__submit-button" name="create-card-button" value="Создать">Создать</button>
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div class="popup page__overlay page__overlay_theme_dark popup_type_view-photo" name="view" id="view">
+    <div class="popup page__overlay page__overlay_theme_dark popup_type_view-photo" id="view">
       <div class="popup__container">
         <button type="button" class="button button_type_close popup__close-photo-button button_close_view-photo" name="close-photo" value="Закрыть фото"></button>
         <figure class="popup__photo-content">
