сделал классы Card и FormValidator, подключил файлы модулями

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <template id="photo-card">
+    <template class="card-template" id="photo-card">
 
       <li class="card photo__card">
         <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
@@ -100,9 +100,10 @@
 
     </template>
   </div>
-  <script src="./scripts/mocks.js"></script>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/mocks.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src='./scripts/FormValidator.js'></script>
+  <sctipt type="module" src="./scripts/Card.js"></sctipt>
 
 </body>
 
