исправил замечания ревью1. готово к ревью2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <template class="card-template" id="photo-card">
 
-      <li class="card photo__card">
+      <li class="card">
         <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
         <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
         <div class="card__description">
@@ -101,9 +101,11 @@
     </template>
   </div>
   <script type="module" src="./scripts/mocks.js"></script>
+  <script type="module" src="./scripts/constants.js"></script>
+  <script type="module" src="./scripts/utils.js"></script>
   <script type="module" src="./scripts/index.js"></script>
   <script type="module" src='./scripts/FormValidator.js'></script>
-  <sctipt type="module" src="./scripts/Card.js"></sctipt>
+  <script type="module" src="./scripts/Card.js"></script>
 
 </body>
 
