--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <template class="card-template" id="photo-card">
+    <template id="card-template">
 
       <li class="card">
         <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
@@ -100,12 +100,16 @@
 
     </template>
   </div>
-  <script type="module" src="./scripts/mocks.js"></script>
-  <script type="module" src="./scripts/constants.js"></script>
-  <script type="module" src="./scripts/utils.js"></script>
+  <script type="module" src="./scripts/constants/mocks.js"></script>
+  <script type="module" src="./scripts/constants/constants.js"></script>
+  <script type="module" src='./scripts/components/FormValidator.js'></script>
+  <script type="module" src="./scripts/components/Card.js"></script>
+  <script type="module" src="./scripts/components/Popup.js"></script>
+  <script type="module" src="./scripts/components/PopupWithImage.js"></script>
+  <script type="module" src="./scripts/components/PopupWithForm.js"></script>
+  <script type="module" src="./scripts/components/UserInfo.js"></script>
+  <script type="module" src="./scripts/components/Section.js"></script>
   <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src='./scripts/FormValidator.js'></script>
-  <script type="module" src="./scripts/Card.js"></script>
 
 </body>
 
