--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <template id="card-template">
 
       <li class="card">
-        <img class="card__image" src="" alt="фото" name="photo" title="Открыть фото">
+        <img class="card__image" src="https" alt="фото" name="photo" title="Открыть фото">
         <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
