--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,16 @@
       </div>
     </div>
 
+    <div class="popup page__overlay page__overlay_theme_light popup_type_confirm" id="confirm">
+      <div class="popup__container">
+        <button type="button" class="button button_type_close popup__close-button button_close_confirm-popup" name="close-confirm-popup" value="Закрыть"></button>
+        <form class="form popup__form form_type_confirm" name="confirm-form" novalidate>
+          <h2 class="form__title">Вы уверены?</h2>
+          <button type="submit" class="button button_type_submit form__submit-button" name="confirm-button" value="Да">Да</button>
+        </form>
+      </div>
+    </div>
+
     <template id="card-template">
 
       <li class="card">
@@ -93,7 +103,10 @@
         <button type="button" class="button button_type_delete card__delete-button" name="delete-button" value="delete" title="Удалить фото"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
+					<div class="card__like-info">
+            <button type="button" class="button button_type_like card__like-button button_like-status_not-checked" name="like-button" value="like"></button>
+					  <span class="card__like-counter">5</span>
+					</div>
         </div>
       </li>
 
