--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <main class="content page__content">
 
       <section class="user-profile content__user-profile">
-        <img class="user-profile__avatar" src="./images/avatar.svg" alt="аватар пользователя">
+        <button type="button" class="button  user-profile__avatar-button" name="edit-avatar-form-button" id="edit-avatar-form-button" value="Добавить аватар" title="Изменить аватар"></button>
         <div class="user-profile__user-info">
           <h1 class="user-profile__user-name">Жак-Ив Кусто</h1>
           <button type="button" class="button button_type_edit user-profile__edit-button" name="edit-profile-form-button" id="edit-profile-form-button" value="Открыть форму" title="Редактировать профиль"></button>
@@ -92,6 +92,22 @@
         <form class="form popup__form form_type_confirm" name="confirm-form" novalidate>
           <h2 class="form__title">Вы уверены?</h2>
           <button type="submit" class="button button_type_submit form__submit-button" name="confirm-button" value="Да">Да</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup page__overlay page__overlay_theme_light popup_type_edit-avatar" id="avatar">
+      <div class="popup__container">
+        <button type="button" class="button button_type_close popup__close-button button_close_edit-avatar-form" name="close-edit-avatar-form" value="Закрыть форму"></button>
+        <form class="form popup__form form_type_avatar" name="edit-avatar-form" novalidate>
+          <h2 class="form__title">Обновить аватар</h2>
+          <ul class="form__inputs">
+            <li class="form__field">
+              <input type="url" class="form__input form__input_type_avatar-link" name="avatar-link-input" id="avatar-link-input" value=" " placeholder="Ссылка на картинку" required>
+              <span class="form__input-error" id="avatar-link-input-error"></span>
+            </li>
+          </ul>
+          <button type="submit" class="button button_type_submit form__submit-button" name="create-avatar-button" value="Создать">Создать</button>
         </form>
       </div>
     </div>
