--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header page__header">
-      <img class="header__logo" src="./images/logo.svg" alt="логотип место Россия">
+      <img class="header__logo" src="./images/headerLogo.svg" alt="логотип место Россия">
     </header>
 
     <main class="content page__content">
